# ceia-cv2

./: .gitignore  CONVENTIONS.md  finetune_last_layer.py  finetune_resnet_with_svm.py  finetuning.py  image_analyzer.py  image_analyzer_notebook.ipynb  image_analyzer_notebook.py  pyproject.toml  tsne_results.npy  tsne_results_no_sift.npy
tp1/: download-data.py
